--- a/edit.css
+++ b/edit.css
@@ -1,5 +1,5 @@
 /*BEGIN PS4 Controller Styling https://imgur.com/a/8X1b1w0 */
-.controller.edit {
+.controller.ds4 {
     background: url(https://i.imgur.com/J6eKYbO.png);
     height: 598px;
     width: 806px;
@@ -7,45 +7,45 @@
         margin-top: -280px;*/
 }
 
-.edit.disconnected {
+.ds4.disconnected {
     background: url(ps4-assets/disconnected.svgz);
 }
 
-.edit.disconnected div {
+.ds4.disconnected div {
     display: none;
 }
 
-.edit .triggers {
+.ds4 .triggers {
     width: 588px;
     height: 90px;
     position: absolute;
     left: 109px;
 }
 
-.edit .trigger {
+.ds4 .trigger {
     width: 99px;
     height: 100%;
     background: url(https://i.imgur.com/aPwxMQP.png);
     opacity: 0;
 }
 
-.edit .trigger.left {
+.ds4 .trigger.left {
     float: left;
 }
 
-.edit .trigger.right {
+.ds4 .trigger.right {
     float: right;
     background-position-x: 99px;
 }
 
-.edit .bumper {
+.ds4 .bumper {
     width: 99px;
     height: 23px;
     background: url(https://i.imgur.com/c6QaJ4i.png) no-repeat;
     opacity: 0;
 }
 
-.edit .bumpers {
+.ds4 .bumpers {
     position: absolute;
     width: 588px;
     height: 23px;
@@ -53,22 +53,22 @@
     top: 94px;
 }
 
-.edit .bumper.pressed {
+.ds4 .bumper.pressed {
     opacity: 1;
 }
 
-.edit .bumper.left {
+.ds4 .bumper.left {
     /* -webkit-transform: rotateY(180deg); */
     /* transform: rotateY(180deg); */
     float: left;
 }
 
-.edit .bumper.right {
+.ds4 .bumper.right {
     float: right;
     transform: rotateY(180deg);
 }
 
-.edit .touchpad {
+.ds4 .touchpad {
     width: 262px;
     height: 151px;
     position: absolute;
@@ -76,11 +76,11 @@
     top: 122px;
 }
 
-.edit .touchpad.pressed {
+.ds4 .touchpad.pressed {
     background: url(https://i.imgur.com/hl7qtYo.png) no-repeat center;
 }
 
-.edit .meta {
+.ds4 .meta {
     width: 42px;
     height: 42px;
     position: absolute;
@@ -88,12 +88,12 @@
     bottom: 216px;
 }
 
-.edit .meta.pressed {
+.ds4 .meta.pressed {
     background: url(ps4-assets/meta.svgz) no-repeat center;
 }
 
 /*Not needed, but I like keeping them here for posterity*/
-/*.edit .quadrant{
+/*.ds4 .quadrant{
 position: absolute;
 background: url(ps4-assets/player-n.svgz);
 height: 17px;
@@ -101,19 +101,19 @@ width: 111px;
 top: 140px;
 left: 240px;
 }
-.edit .p0{
+.ds4 .p0{
 background-position: 0 -6px;
 }
-.edit .p1{
+.ds4 .p1{
 background-position: 0 -28px;
 }
-.edit .p2{
+.ds4 .p2{
 background-position: 0 -49px;
 }
-.edit .p3{
+.ds4 .p3{
 background-position: 0 -70px;
 }*/
-.edit .arrows {
+.ds4 .arrows {
     position: absolute;
     width: 352px;
     height: 46px;
@@ -121,31 +121,31 @@ background-position: 0 -70px;
     left: 227px;
 }
 
-.edit .back, .edit .start {
+.ds4 .back, .ds4 .start {
     background: url(https://i.imgur.com/4aO7GLZ.png);
     width: 28px;
     height: 46px;
     opacity: 0;
 }
 
-.edit .back.pressed, .edit .start.pressed {
+.ds4 .back.pressed, .ds4 .start.pressed {
     /* background-position-y: -21px; */
     /* margin-top: 2px; */
     opacity: 1;
 }
 
-.edit .back {
+.ds4 .back {
     float: left;
     /* width: 28px; */
 }
 
-.edit .start {
+.ds4 .start {
     float: right;
     /* width: 28px; */
     background-position: 28px 0;
 }
 
-.edit .abxy {
+.ds4 .abxy {
     position: absolute;
     width: 170px;
     height: 171px;
@@ -153,41 +153,41 @@ background-position: 0 -70px;
     left: 567px;
 }
 
-.edit .button {
+.ds4 .button {
     position: absolute;
     width: 55px;
     height: 55px;
     background: url(https://i.imgur.com/3HsIcU6.png);
 }
 
-.edit .button.pressed {
+.ds4 .button.pressed {
     background-position-y: 55px;
     /* margin-top: 5px; */
 }
 
-.edit .a {
+.ds4 .a {
     background-position: 0 0;
     bottom: 0;
     left: 58px;
 }
 
-.edit .b {
+.ds4 .b {
     background-position: -57px 0;
     top: 58px;
     right: 0px;
 }
 
-.edit .x {
+.ds4 .x {
     background-position: -113px 0;
     top: 58px;
 }
 
-.edit .y {
+.ds4 .y {
     background-position: 55px 0;
     left: 58px;
 }
 
-.edit .sticks {
+.ds4 .sticks {
     position: absolute;
     width: 361px;
     height: 105px;
@@ -195,32 +195,32 @@ background-position: 0 -70px;
     left: 228px;
 }
 
-.edit .stick {
+.ds4 .stick {
     position: absolute;
     background: url(https://i.imgur.com/TgKq0zQ.png);
     height: 94px;
     width: 94px;
 }
 
-.edit .stick.pressed.left {
+.ds4 .stick.pressed.left {
     background-position-x: -96px;
 }
 
-.edit .stick.pressed.right {
+.ds4 .stick.pressed.right {
     background-position-x: -192px;
 }
 
-.edit .stick.left {
+.ds4 .stick.left {
     top: 0;
     left: 0;
 }
 
-.edit .stick.right {
+.ds4 .stick.right {
     top: calc(100% - 105px);
     left: calc(100% - 105px);
 }
 
-.edit .dpad {
+.ds4 .dpad {
     position: absolute;
     width: 125px;
     height: 126px;
@@ -228,51 +228,51 @@ background-position: 0 -70px;
     left: 92px;
 }
 
-.edit .face {
+.ds4 .face {
     background: url(https://i.imgur.com/thMoWjr.png);
     position: absolute;
 }
 
-.edit .face.up, .edit .face.down {
+.ds4 .face.up, .ds4 .face.down {
     width: 36px;
     height: 52px;
 }
 
-.edit .face.left, .edit .face.right {
+.ds4 .face.left, .ds4 .face.right {
     width: 52px;
     height: 36px;
 }
 
-.edit .face.up {
+.ds4 .face.up {
     left: 44px;
     top: 0;
     background-position: -37px 0px;
 }
 
-.edit .face.down {
+.ds4 .face.down {
     left: 44px;
     bottom: 0;
     background-position: 0px 0;
 }
 
-.edit .face.left {
+.ds4 .face.left {
     top: 45px;
     left: 0;
     background-position: 104px 0;
 }
 
-.edit .face.right {
+.ds4 .face.right {
     top: 45px;
     right: 0px;
     background-position: 52px 0;
 }
 
-.edit .face.pressed {
+.ds4 .face.pressed {
     /* margin-top: 5px; */
     background-position-y: 52px;
 }
 
-.edit.half {
+.ds4.half {
     margin-top: -300px;
 }
 
