--- a/edit.css
+++ b/edit.css
@@ -1,51 +1,33 @@
 /*BEGIN PS4 Controller Styling https://imgur.com/a/8X1b1w0 */
-.controller.ds4 {
+.controller.edit {
     background: url(https://i.imgur.com/J6eKYbO.png);
-    height: 598px;
-    width: 806px;
-    /*    margin-left: -403px;
-        margin-top: -280px;*/
 }
 
-.ds4.disconnected {
-    background: url(ps4-assets/disconnected.svgz);
-}
 
-.ds4.disconnected div {
-    display: none;
-}
-
-.ds4 .triggers {
-    width: 588px;
-    height: 90px;
-    position: absolute;
-    left: 109px;
-}
-
-.ds4 .trigger {
+.edit .trigger {
     width: 99px;
     height: 100%;
     background: url(https://i.imgur.com/aPwxMQP.png);
     opacity: 0;
 }
 
-.ds4 .trigger.left {
+.edit .trigger.left {
     float: left;
 }
 
-.ds4 .trigger.right {
+.edit .trigger.right {
     float: right;
     background-position-x: 99px;
 }
 
-.ds4 .bumper {
+.edit .bumper {
     width: 99px;
     height: 23px;
     background: url(https://i.imgur.com/c6QaJ4i.png) no-repeat;
     opacity: 0;
 }
 
-.ds4 .bumpers {
+.edit .bumpers {
     position: absolute;
     width: 588px;
     height: 23px;
@@ -53,22 +35,22 @@
     top: 94px;
 }
 
-.ds4 .bumper.pressed {
+.edit .bumper.pressed {
     opacity: 1;
 }
 
-.ds4 .bumper.left {
+.edit .bumper.left {
     /* -webkit-transform: rotateY(180deg); */
     /* transform: rotateY(180deg); */
     float: left;
 }
 
-.ds4 .bumper.right {
+.edit .bumper.right {
     float: right;
     transform: rotateY(180deg);
 }
 
-.ds4 .touchpad {
+.edit .touchpad {
     width: 262px;
     height: 151px;
     position: absolute;
@@ -76,24 +58,12 @@
     top: 122px;
 }
 
-.ds4 .touchpad.pressed {
+.edit .touchpad.pressed {
     background: url(https://i.imgur.com/hl7qtYo.png) no-repeat center;
 }
 
-.ds4 .meta {
-    width: 42px;
-    height: 42px;
-    position: absolute;
-    left: 382px;
-    bottom: 216px;
-}
-
-.ds4 .meta.pressed {
-    background: url(ps4-assets/meta.svgz) no-repeat center;
-}
-
 /*Not needed, but I like keeping them here for posterity*/
-/*.ds4 .quadrant{
+/*.edit .quadrant{
 position: absolute;
 background: url(ps4-assets/player-n.svgz);
 height: 17px;
@@ -101,19 +71,19 @@ width: 111px;
 top: 140px;
 left: 240px;
 }
-.ds4 .p0{
+.edit .p0{
 background-position: 0 -6px;
 }
-.ds4 .p1{
+.edit .p1{
 background-position: 0 -28px;
 }
-.ds4 .p2{
+.edit .p2{
 background-position: 0 -49px;
 }
-.ds4 .p3{
+.edit .p3{
 background-position: 0 -70px;
 }*/
-.ds4 .arrows {
+.edit .arrows {
     position: absolute;
     width: 352px;
     height: 46px;
@@ -121,31 +91,31 @@ background-position: 0 -70px;
     left: 227px;
 }
 
-.ds4 .back, .ds4 .start {
+.edit .back, .edit .start {
     background: url(https://i.imgur.com/4aO7GLZ.png);
     width: 28px;
     height: 46px;
     opacity: 0;
 }
 
-.ds4 .back.pressed, .ds4 .start.pressed {
+.edit .back.pressed, .edit .start.pressed {
     /* background-position-y: -21px; */
     /* margin-top: 2px; */
     opacity: 1;
 }
 
-.ds4 .back {
+.edit .back {
     float: left;
     /* width: 28px; */
 }
 
-.ds4 .start {
+.edit .start {
     float: right;
     /* width: 28px; */
     background-position: 28px 0;
 }
 
-.ds4 .abxy {
+.edit .abxy {
     position: absolute;
     width: 170px;
     height: 171px;
@@ -153,41 +123,41 @@ background-position: 0 -70px;
     left: 567px;
 }
 
-.ds4 .button {
+.edit .button {
     position: absolute;
     width: 55px;
     height: 55px;
     background: url(https://i.imgur.com/3HsIcU6.png);
 }
 
-.ds4 .button.pressed {
+.edit .button.pressed {
     background-position-y: 55px;
     /* margin-top: 5px; */
 }
 
-.ds4 .a {
+.edit .a {
     background-position: 0 0;
     bottom: 0;
     left: 58px;
 }
 
-.ds4 .b {
+.edit .b {
     background-position: -57px 0;
     top: 58px;
     right: 0px;
 }
 
-.ds4 .x {
+.edit .x {
     background-position: -113px 0;
     top: 58px;
 }
 
-.ds4 .y {
+.edit .y {
     background-position: 55px 0;
     left: 58px;
 }
 
-.ds4 .sticks {
+.edit .sticks {
     position: absolute;
     width: 361px;
     height: 105px;
@@ -195,32 +165,32 @@ background-position: 0 -70px;
     left: 228px;
 }
 
-.ds4 .stick {
+.edit .stick {
     position: absolute;
     background: url(https://i.imgur.com/TgKq0zQ.png);
     height: 94px;
     width: 94px;
 }
 
-.ds4 .stick.pressed.left {
+.edit .stick.pressed.left {
     background-position-x: -96px;
 }
 
-.ds4 .stick.pressed.right {
+.edit .stick.pressed.right {
     background-position-x: -192px;
 }
 
-.ds4 .stick.left {
+.ed .stick.left {
     top: 0;
     left: 0;
 }
 
-.ds4 .stick.right {
+.edit .stick.right {
     top: calc(100% - 105px);
     left: calc(100% - 105px);
 }
 
-.ds4 .dpad {
+.edit .dpad {
     position: absolute;
     width: 125px;
     height: 126px;
@@ -228,51 +198,51 @@ background-position: 0 -70px;
     left: 92px;
 }
 
-.ds4 .face {
+.edit .face {
     background: url(https://i.imgur.com/thMoWjr.png);
     position: absolute;
 }
 
-.ds4 .face.up, .ds4 .face.down {
+.edit .face.up, .edit .face.down {
     width: 36px;
     height: 52px;
 }
 
-.ds4 .face.left, .ds4 .face.right {
+.edit .face.left, .edit .face.right {
     width: 52px;
     height: 36px;
 }
 
-.ds4 .face.up {
+.edit .face.up {
     left: 44px;
     top: 0;
     background-position: -37px 0px;
 }
 
-.ds4 .face.down {
+.edit .face.down {
     left: 44px;
     bottom: 0;
     background-position: 0px 0;
 }
 
-.ds4 .face.left {
+.edit .face.left {
     top: 45px;
     left: 0;
     background-position: 104px 0;
 }
 
-.ds4 .face.right {
+.edit .face.right {
     top: 45px;
     right: 0px;
     background-position: 52px 0;
 }
 
-.ds4 .face.pressed {
+.edit .face.pressed {
     /* margin-top: 5px; */
     background-position-y: 52px;
 }
 
-.ds4.half {
+.edit.half {
     margin-top: -300px;
 }
 
